# Agora-Discord-Bot

./: .gitignore  Dockerfile  README.md  agorabot.py  compose.yaml  config.yaml  example_config.yaml  main.py  pyproject.toml  requirements.txt
